--- a/playbook.yml
+++ b/playbook.yml
@@ -4,3 +4,10 @@
    - copy:
         content: "hello world"
         dest: /tmp/abc.txt
+     notify: restart_httpd
+
+  handlers:
+    - name: restart_httpd
+      service:
+        name: httpd
+        state: restarted      
